Fix sidebar whitespace hover

--- a/styles.css
+++ b/styles.css
@@ -102,12 +102,14 @@ a {
   flex-direction: column;
 }
 
-.sidebar-header {
+.dashboard-icon,
+.sidebar-header-text {
   align-items: flex-start;
   transition: all 1s ease;
 }
 
-.sidebar-header:hover {
+.dashboard-icon:hover,
+.sidebar-header-text:hover {
   transform: scale(1.03);
 }
 
@@ -127,8 +129,10 @@ a {
   text-shadow: 0px 3px 3px rgba(0, 0, 0, 1);
 }
 
-.sidebar-header,
-a {
+.dashboard-icon,
+.sidebar-header-text,
+.navigation-icon,
+.navigation-text {
   cursor: pointer;
 }
 
@@ -137,11 +141,12 @@ a {
   font-weight: 900;
 }
 
-a:not(.github-logo) {
+.navigation-icon,
+.navigation-text {
   transition: all 0.75s ease;
 }
-
-a:not(.github-logo):hover {
+.navigation-icon:hover,
+.navigation-text:hover {
   transform: scale(1.05);
 }
 
